--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,9 +34,6 @@ body {
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    align-items: center;
-    justify-content: space-between;
-    display: flex;
     padding: 1rem 3rem;
         
         a {
@@ -85,31 +82,6 @@ main {
 #drawer-button {
     color: #fff;
     background-color: #fff;
-}
-.contact-btn {
-    button {
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 1rem;
-        background-color: #fff;
-        display: inline;
-        justify-content: right;
-        padding: 10px 24px;
-        border-radius: 16px;
-        font-weight: bold;
-        color: #000000;
-        border-style: solid;
-        border-color:#fff;
-        transition: all 300ms ease;
-        cursor: pointer;
-            &:hover {
-                background-color: $bg-color;
-                color: #ffffff;
-                border-style: solid;
-                border-color: #ffffff;
-                font-weight: 900;
-        }   
-    }
 }
 
 /* Inicio */
@@ -260,10 +232,14 @@ main a{
 
 /* Portfolio Page */
 
-.last-project {
+#last-project {
     display: block;
+    #figma-prototype{
+        width: 360px;
+        height: 800px;
+    }
 }
-.last-project-container {
+#last-project-container {
     text-align: center;
     padding: 40px 0;
         h1 {
@@ -276,11 +252,6 @@ main a{
                 }  
         }
 }
-.project-iframe {
-    display: flex;
-    justify-content: center;
-}
-
 /* Footer */
 
 #footer {
@@ -309,7 +280,11 @@ main a{
                     justify-content: center;
                     align-items: center;
                     padding: 10px;
+                        .contacto{
+                            width: 360px;
+                        }
                         .indice {
+                            width: 90px;
                             margin: 0;
                             padding: 0;
                         }
@@ -350,7 +325,7 @@ main a{
 
 /* Contacto.html */
 
-.main-contact {
+#main-contact {
     padding: 25px;
 }
 #contacto-container {
@@ -371,10 +346,13 @@ main a{
     margin: 10px auto;
         #checkbox {
             width: 100%;
+            align-items: center;
+            justify-content: space-between;
         ul  {
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 0;
             flex-wrap: wrap;
             height: 300px;
                 li {
@@ -408,7 +386,7 @@ main a{
 }
 
 /* Formulario */
-.forms {
+#forms {
     max-width: 1200px;
     margin: 10px auto;
     background-color: $ligth-grey;
@@ -421,11 +399,10 @@ main a{
             margin-bottom: 40px;
         }
 }
-.form-container {
+#form-container {
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: auto;
         input {
             width: max-content;
             padding: 20px 40px;
@@ -438,10 +415,10 @@ main a{
             font-size: 20px;
         }
 }
-.submit-btn {
+#submit-btn {
+    margin: 40px 0;
     display: flex;
-    justify-content: end;
-    margin: 40px 25px 20px;
+    justify-content: right;
         button {
             padding: 10px 80px;
             font-size: 20px;
@@ -747,13 +724,13 @@ main a{
                     background-color: $bg-color;
                     transition: all 0.3s ease;
                     box-shadow: 0px 0px 20px $bg-color;
+                        &:hover {
+                            background-color: $cards-color;
+                        }
                         i{
                             font-size: 46px;
                             display: block;
                             padding: 20px 25px;
-                        }
-                        :hover {
-                            background-color: $cards-color;
                         }
                 }
         }
@@ -761,7 +738,7 @@ main a{
 
 /* md-Desktop */
 
-@media (min-width: 1024px) and (max-width: 1439px) {
+@media (min-width: 1024px) and (max-width: 1599px) {
     @import "./media-querys/desktop-md";
 }
 
