--- a/scss/media-querys/_mobile.scss
+++ b/scss/media-querys/_mobile.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-/* Home,Footer, Nav */
+// Inicio
 
 #intro {
     padding: 1rem 1rem;
@@ -35,32 +35,11 @@
 .about-btn button {
     width: max-content;
 }
-.footer {
-        .footer-container {
-            display: flex;
-            flex-wrap: wrap;
-            font-size: 1rem;
-            align-items: center;
-            text-align: center;
-        }
-}
 .cv-btn button {
     width: 100%;
 }
 .about-btn button {
     width: 100%;
-}
-#main-nav a:hover {
-    transition:all 300ms ease;
-    text-decoration: none;
-    color: #000000;
-    font-weight: 800;
-    border-radius: 16px;
-    padding: auto;
-    background-color: #ffffff;
-}
-#nav-container a span {
-    display: n;
 }
 #projects {
     margin: 0px;
@@ -117,6 +96,40 @@
                 &:hover{
                     filter: brightness(0.7);
                 }
+        }
+}
+
+// Nav
+
+#main-nav a:hover {
+    transition:all 300ms ease;
+    text-decoration: none;
+    color: #000000;
+    font-weight: 800;
+    border-radius: 16px;
+    padding: auto;
+    background-color: #ffffff;
+}
+#nav-container a span {
+    display: n;
+}
+
+// Footer
+
+#footer {
+    #footer-columns {
+        width: 100%;
+        }
+        #footer-container {
+            margin: 0;
+            #footer-columns  {
+                justify-content: center;
+                height: auto;
+                padding: 32px;
+                .contacto {
+                    padding: auto;
+                }
+            }
         }
 }
 
@@ -240,7 +253,7 @@
 }
 #educacion {
     width: 100%;
-        .left-education h4{
+        .left-education h3{
             font-weight: normal;
             font-size: 14px;
                 span {
@@ -292,3 +305,72 @@
     padding: 30px 20px;
     border-top: 1px solid $cards-color;
 }
+
+// Contacto
+
+#contacto-container {
+    h1 {
+        font-size: 24px;
+    }
+}
+#buttons-container {
+    #checkbox {
+        width: 100%;
+        ul{
+            height: auto;
+            width: 100%;
+                li {
+                    width: 100%;
+                    label {
+                        margin: 8px 0;
+                        width: 100%;
+                        font-size: 18px;
+                        text-align: center;
+                        padding: 16px 0;
+                    }
+                }
+            }
+    }
+    
+}
+
+// Contacto/Formulario
+
+#forms {
+    padding: 20px;
+        h2 {
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+}
+#form-container {
+        input {
+            width: 100%;
+            margin: 16px 0;
+            padding: 10px 20px;
+            font-size: 14px;
+            &::placeholder{
+                    font-size: 14px;
+            }
+        }
+}
+#submit-btn {
+    padding: 16px 10px;
+        button {
+            font-size: 18px;
+            padding: 10px 60px;
+            font-size: 14px;
+            width: 100%;
+        }
+}
+
+// Portfolio
+
+#last-project {
+    #figma-prototype {
+        width: 222px;
+        height: 494px;
+    }
+}
+
