--- a/scss/media-querys/_tablet.scss
+++ b/scss/media-querys/_tablet.scss
@@ -59,3 +59,229 @@
                 text-align: center;
             }
     }
+
+// Contacto
+
+#contacto-container {
+    h1 {
+        font-size: 32px;
+    }
+}
+#buttons-container {
+    #checkbox {
+        ul{
+            height: 250px;
+                li {
+                    label {
+                        font-size: 20px;
+                        padding: 16px 24px;
+                    }
+                }
+            }
+    }
+    
+}
+
+// Contacto/Formulario
+
+#forms {
+    padding: 20px;
+        h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+}
+#form-container {
+        input {
+            width: 100%;
+            margin: 16px 0;
+            padding: 10px 20px;
+            font-size: 18px;
+            &::placeholder{
+                    font-size: 16px;
+            }
+        }
+}
+#submit-btn {
+    padding: 40px 10px;
+        button {
+            font-size: 18px;
+            padding: 10px 60px;
+        }
+}
+
+// Portfolio
+
+#last-project {
+    #figma-prototype {
+        width: 360px;
+        height: 800px;
+    }
+}
+
+// About Page
+
+#about {
+    padding: 1rem 1rem;
+}
+#descripciones-about {
+    padding: 24px;
+    font-size: 18px;
+    font-weight: 200;
+        span {
+            color: $primary-color;
+            font-size: 2rem;
+            font-weight: 1200;
+            font-family: "Fragment"; 
+        }
+}
+.education-btn {
+    button {
+    width: max-content;
+    padding: 10px 20px;
+    font-size: 18px;
+    width: 100%;
+    }
+}
+.contact-btn {
+    button {
+    width: max-content;
+    width: 100%;
+    font-size: 18px;
+    }
+}
+#more-info {
+    margin: auto;
+    padding-bottom: 40px;
+}
+
+/* Sección Izquierda */
+
+#aptitudes  {
+    margin: 40px auto;
+    padding: 24px;
+    background-color: $ligth-grey;
+    border-radius: 16px;
+    box-shadow: 0 0 20px rgb(22, 25, 27);
+    width: 500px;
+        h2 {
+            font-size: 32px;
+            font-family: "Fragment";
+            font-weight: bold;
+            margin-bottom: 40px;
+            text-align: center;
+                span {
+                    color: $primary-color;
+                    font-family: "Fragment";
+                    font-style: italic;
+                }
+        }
+}
+.aptitudes-ul {
+    padding: 0 10px;
+        ul li {
+            padding: 10px 0px;
+            font-size: 20px;
+                i {
+                    margin-right: 20px;
+                    font-size: 24px;
+                    width: 29px;
+                    text-align: center;
+                }
+        }
+}
+
+/* Sección Derecha */
+
+#habilidades-container {
+    justify-content: center !important;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: $ligth-grey;
+    border-radius: 16px;
+    box-shadow: 0 0 20px rgb(22, 25, 27);
+    width: 500px;
+        h2{
+            font-size: 32px;
+            font-family: "Fragment";
+            font-weight: bold;
+            margin-bottom: 40px;
+            text-align: center;
+                span {
+                    color: $primary-color;
+                    font-family: "Fragment";
+                    font-style: italic;
+                }
+        }
+}
+.habilidades-ul {
+    padding: 0 10px;
+        ul li {
+            padding: 10px 0px;
+            font-size: 20px;
+                i {
+                    margin-right: 20px;
+                    font-size: 24px;
+                    width: 29px;
+                    text-align: center;
+                }
+        }
+}
+
+/* About-Educación */
+
+#education-section {
+    padding: 20px 0;
+    margin: auto;
+}
+#education-h2 h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 20px 0;
+}
+#educacion {
+    width: 100%;
+        .left-education h3{
+            font-weight: normal;
+            font-size: 18px;
+                span {
+                    font-weight: bold;
+                    font-size: 24px;
+                }
+        }
+        .right-education {
+            text-align: right;
+            font-size: 18px;
+                h3 {
+                    text-align: right;
+                    font-size: 20px;
+                    
+                }
+                a {
+                    color: #fff;
+                    font-weight: bold;
+                    font-style: italic;
+                    text-decoration: none;
+                    transition: all 0.3s ease;
+                        &:hover {
+                            color: $primary-color;
+                        }
+                }
+        }
+}
+#psp-illustrator {
+    padding: 30px 20px;
+    border-top: 1px solid $cards-color;
+}
+#uxui {
+    padding: 30px 20px;
+    border-top: 1px solid $cards-color;
+}
+#uxui-avanzado {
+    padding: 30px 20px;
+    border-top: 1px solid $cards-color;
+}
+#webd{
+    padding: 30px 20px;
+    border-top: 1px solid $cards-color;
+}
