--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@
   font-family: "Fragment";
   src: url(../fonts/Fragment/PPFragment-SerifRegular.otf);
 }
-/* Colors */
 body {
   color: #ffffff;
 }
@@ -333,7 +332,7 @@ main a {
   font-size: 15px;
 }
 
-/* Contacto.html */
+/* Contacto Page */
 #main-contact {
   padding: 25px;
 }
@@ -702,7 +701,7 @@ main a {
   padding: 100px;
 }
 
-.skill-container {
+#skill-container {
   background-color: #333538;
   display: flex;
   border-radius: 16px;
@@ -714,33 +713,37 @@ main a {
   width: 100%;
 }
 
-.habilidades {
+#habilidades {
   max-width: 1200px;
   padding: 25px;
   display: inline-block;
   border-radius: 16px;
   margin: 50px;
 }
-.habilidades h1 {
+#habilidades h1 {
   text-align: center;
   padding-bottom: 20px;
   font-size: 48px;
   color: #1cbfdf;
 }
-.habilidades p {
+#habilidades p {
   margin-bottom: 25px;
   color: #bbb;
   text-align: center;
 }
-.habilidades ul {
+#habilidades ul {
   padding: 25px 0;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  grid-auto-rows: 175px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 10px;
   text-align: center;
 }
-.habilidades ul li {
+#habilidades ul li {
   display: inline;
+  align-items: center !important;
+  width: 220px;
   padding: 25px;
   font-size: 26px;
   border-radius: 16px;
@@ -748,10 +751,10 @@ main a {
   transition: all 0.3s ease;
   box-shadow: 0px 0px 20px #212427;
 }
-.habilidades ul li:hover {
+#habilidades ul li:hover {
   background-color: #535456;
 }
-.habilidades ul li i {
+#habilidades ul li i {
   font-size: 46px;
   display: block;
   padding: 20px 25px;
@@ -1243,6 +1246,12 @@ main a {
     padding: 30px 20px;
     border-top: 1px solid #535456;
   }
+  #habilidades {
+    margin: auto;
+  }
+  #habilidades h1 {
+    font-size: 42px;
+  }
 }
 /* Mobile View */
 @media (min-width: 300px) and (max-width: 480px) {
@@ -1582,6 +1591,28 @@ main a {
   #last-project #figma-prototype {
     width: 222px;
     height: 494px;
+  }
+  .about-main {
+    padding: 32px;
+  }
+  #habilidades {
+    margin: auto;
+  }
+  #habilidades h1 {
+    font-size: 36px;
+  }
+  #habilidades ul {
+    gap: 1rem;
+    grid-auto-rows: 125px;
+    grid-template-columns: repeat(auto-fill, minmax(113px, 1fr));
+  }
+  #habilidades ul li {
+    width: 113px;
+    font-size: 16px;
+  }
+  #habilidades ul li i {
+    font-size: 24px;
+    padding: 10px 16px;
   }
 }
 
