--- a/scss/media-querys/_tablet.scss
+++ b/scss/media-querys/_tablet.scss
@@ -285,3 +285,12 @@
     padding: 30px 20px;
     border-top: 1px solid $cards-color;
 }
+
+// Habilidades Page
+
+#habilidades {
+    margin: auto;
+    h1 {
+        font-size: 42px;
+    }
+}
